[package]
name = "un_zip"
version = "0.1.0"
authors = ["biud436 <biud436@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "un_zip"
crate-type = ["dylib"]

[dependencies]
zip = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }